coucou c'est un push

--- a/GameReader/app/build.gradle
+++ b/GameReader/app/build.gradle
@@ -55,5 +55,16 @@ dependencies {
 
     //recyclerview
     implementation "com.android.support:recyclerview-v7:28.0.0"
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-beta02'
 
+
+    //navigation
+    def nav_version = "1.0.0-beta02"
+    implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
+
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
