--- a/GameReader/app/build.gradle
+++ b/GameReader/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+apply plugin: 'androidx.navigation.safeargs.kotlin'
+
 
 android {
     compileSdkVersion 28
@@ -21,6 +23,9 @@ android {
                 arg("room.schemaLocation", "$projectDir/schemas".toString())
             }
         }
+    }
+    dataBinding {
+        enabled = true
     }
     buildTypes {
         release {
@@ -39,6 +44,8 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.fragment:fragment-ktx:1.0.0"
 
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -59,7 +66,7 @@ dependencies {
 
 
     //navigation
-    def nav_version = "1.0.0-beta02"
+    implementation "android.arch.navigation:navigation-fragment-ktx:$nav_version"
     implementation "android.arch.navigation:navigation-ui-ktx:$nav_version"
 
 
