--- a/GameReader/app/build.gradle
+++ b/GameReader/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation  'com.squareup.retrofit2:converter-scalars:2.1.0'
 
     //room
     implementation "androidx.room:room-runtime:$room_version"
